...
                    android:gravity="center"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:drawableLeft="@drawable/login_usermail"
                        android:layout_centerVertical="true"
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_image_height"
                        android:textColor="@color/verde"
                        android:clickable="true"
                        android:textStyle="bold"
                        android:textSize="@dimen/big_font"
...
                    android:gravity="center"
                    android:orientation="horizontal">


                    <EditText
                        android:layout_centerVertical="true"
                        android:id="@+id/edt_password"
                        android:drawableLeft="@drawable/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_image_height"
                        android:textColor="@color/verde"
                        android:textStyle="bold"
                        android:textSize="@dimen/big_font"
...
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/btn_signin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.3"
                        android:textColor="@color/greenapp4"
                        android:textSize="@dimen/big_font"
                        android:textStyle="bold"
...
