...
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btn_user_teacher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_teacher"
                        android:padding="@dimen/normal_padding"/>
...
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btn_user_student"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/normal_padding"
                        android:src="@drawable/ic_student"/>
...
