...
            android:orientation="vertical"
            android:gravity="center">



            <Button
                android:id="@+id/start_task_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/huge_margin"
                android:layout_marginRight="@dimen/huge_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:paddingLeft="@dimen/normal_margin"
...
                            android:textStyle="bold"
                            android:textSize="@dimen/big_font"
                            android:gravity="center"/>

                        <EditText
                            android:layout_centerInParent="true"
                            android:id="@+id/edtinputcode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/verde"
                            android:textStyle="bold"
                            android:textSize="@dimen/extra_huge_font"
                            android:maxLength="4"
...
