...
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_free_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/huge_margin"
                android:layout_marginRight="@dimen/huge_margin"
                android:textSize="@dimen/large_font"
                android:textColor="@color/white"
...
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>

            <Button
                android:id="@+id/btn_evaluation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/huge_margin"
                android:layout_marginRight="@dimen/huge_margin"
                android:textSize="@dimen/big_font"
                android:textColor="@color/white"
...
