...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_alignParentBottom="true"
                    android:id="@+id/btn_get_report"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/results_app_button"
                    android:text="@string/text_get_report"/>


                <Button
                    android:layout_alignParentBottom="true"
                    android:id="@+id/btn_finish_one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/results_app_button"
                    tools:text="@string/text_finish_one"
                    android:text="@string/text_start_two"/>
...
