...
                    <TextView
                        android:id="@+id/txt_answer_key"
                        style="@style/style_text_x"
                        android:text="@string/text_answer_key"/>

                    <Spinner
                        android:id="@+id/spn_answer_key"
                        style="@style/defaul_app_spinner"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/big_margin" />

                    <TextView
                        android:id="@+id/txt_choose_type_report"
                        style="@style/style_text_x"
                        android:text="@string/text_choose_type_report"/>

                    <Button
                        android:id="@+id/btn_simple_report"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/large_margin"
                        android:textSize="@dimen/big_font"
                        android:textColor="@color/white"
                        android:background="@drawable/button_round_green"
...
