...
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/twhite1"/>

                <Button
                    android:layout_alignParentBottom="true"
                    android:id="@+id/btn_start_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/results_app_button"
                    android:text="@string/text_start_two"/>

...
